--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "./src/app.js",
   "scripts": {
-    "start": "node run ./src/app.js",
-    "dev": "nodemon run .src/app.js",
+    "start": "node ./src/app.js",
+    "dev": "nodemon -L ./src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
